--- a/templates/Webscrape_sunburst.html
+++ b/templates/Webscrape_sunburst.html
@@ -15,6 +15,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+              <a class="dropdown-item" href="/">
+                Home
+                <i class="fas fa-sun"></i>
+            </a>
                 <li class="nav-item active">
                     <a class="dropdown-item" href="/solar">
                         solar
