--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -32,10 +32,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
+                    <a class="dropdown-item" href="/">
+                        Home
+                        <i class="fas fa-sun"></i>
+                    </a>
+                </li>
+                <li class="nav-item active">
                     <a class="dropdown-item" href="/solar">
-            solar
-            <i class="fas fa-sun"></i>
-          </a>
+                        solar
+                        <i class="fas fa-sun"></i>
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="dropdown-item" href="/hydro">
