--- a/templates/location.html
+++ b/templates/location.html
@@ -5,8 +5,8 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Solar</title>
-
+        <title>Location of all plants</title>
+        <h1>Geographic Locations of Renewable Energy Plants in the US</h1>
         <!-- Google Font -->
         <!-- <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"> -->
 
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="../static/css/style.css" />
         <link rel="stylesheet" href="./style.css" />
 
+
         <title>Solar</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -24,50 +25,49 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-between">
+            <a class="navbar-brand h1 goofy_blue" href="/">
+                <h1></h1>
+                <i class="fas fa-home"></i>
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <a class="dropdown-item" href="/">
-                        Home
-                        <i class="fas fa-sun"></i>
-                    </a>
                     <li class="nav-item active">
                         <a class="dropdown-item" href="/solar">
-            solar
+            Solar
             <i class="fas fa-sun"></i>
           </a>
                     </li>
                     <li class="nav-item">
                         <a class="dropdown-item" href="/hydro">
-            hydroelectric
+            Hydroelectric
             <i class="fas fa-water"></i>
           </a>
                     </li>
                     <li class="nav-item">
                         <a class="dropdown-item" href="/location">
-            location
+            Location
             <i class="fas fa-map-marker"></i>
           </a>
                     </li>
                     <li class="nav-item">
                         <a class="dropdown-item" href="/wind">
-            wind
+            Wind
             <i class="fas fa-wind"></i>
           </a>
                     </li>
                     <li class="nav-item">
                         <a class="dropdown-item" href="/heatmap">
-            heatmap
+            Heatmap
             <i class="fas  fas fa-thermometer-half"></i>
           </a>
                     </li>
                     <li class="nav-item">
-                        <a class="dropdown-item" href="/sunburst">
-            sunburst
+                        <a class="dropdown-item" href="/webscrape_sunburst">
+            Sunburst
             <i class="fas fa-meteor"></i>
           </a>
                 </ul>
@@ -97,6 +97,8 @@
 
         <!-- Leaflet heatmap plugin-->
         <script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
+
+        
 
     </body>
 
