--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,3 +33,24 @@ html {
   margin-right: 8px;
   opacity: 0.7;
 }
+
+#background {
+  width: 100%; 
+  height: 100%; 
+  position: fixed; 
+  left: 0px; 
+  top: 0px; 
+  z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
+}
+
+.stretch {
+  width:100%;
+  height:100%;
+}
+
+#sunburst {
+  height: 150px;
+  width: 150px;
+
+
+}
