--- a/templates/Webscrape_sunburst.html
+++ b/templates/Webscrape_sunburst.html
@@ -1,103 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="../static/mars.css">
-  <meta charset="UTF-8">
 <head>
-  <title>Mars Homepage</title>
+    <meta charset="UTF-8">
+    <title>Interactive Visualizations of Renewable Energy</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="style3.css">
+    <script src="https://kit.fontawesome.com/76c400baa8.js" crossorigin="anonymous"></script>
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <a class="dropdown-item" href="/">
-                Home
-                <i class="fas fa-sun"></i>
-            </a>
-                <li class="nav-item active">
-                    <a class="dropdown-item" href="/solar">
-                        solar
-                        <i class="fas fa-sun"></i>
+<body>
+
+    <div class="container-fluid">
+        <!-- The header starts here -->
+        <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-between">
+                    <a class="navbar-brand h1 goofy_blue" href="/">
+                        <h1></h1>
+                        <i class="fas fa-home"></i>
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="/hydro">
-                        hydroelectric
-                        <i class="fas fa-water"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="/location">
-                        location
-                        <i class="fas fa-map-marker"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="/wind">
-                        wind
-                        <i class="fas fa-wind"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="/heatmap">
-                        heatmap
-                        <i class="fas fa-thermometer-half"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="/sunburst">
-                        sunburst
-                        <i class="fas fa-meteor"></i>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2">
-      </div>
-      <div class="col-md-5">
-        <div id="sunburst"></div>
-      </div>
-      <div class="col-md-5">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div>
-          Last Refresh: {{r_last_refresh}}
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <form class="form-inline">
+                        <div class="collapse navbar-collapse ul_format" id="navbarNavDropdown">
+                            <ul class="navbar-nav ">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Plots
+                                        <i class="fas fa-chart-line"></i>
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="/solar">
+                                            Solar
+                                            <i class="fas fa-sun"></i>
+                                        </a>
+                                        <a class="dropdown-item" href="/hydro">
+                                            Hydroelectric
+                                            <i class="fas fa-tint"></i>
+                                        </a>
+                                        <a class="dropdown-item" href="/location">
+                                            Location
+                                            <i class="far fa-map-marker"></i>
+                                        </a>
+                                        <a class="dropdown-item" href="/wind">
+                                            Wind
+                                            <i class="fas fa-wind"></i>
+                                        </a>
+                                        <a class="dropdown-item" href="/heatmap">
+                                            Heatmap
+                                            <i class="fas fa-thermometer-half"></i>
+                                        </a>
+                                        <a class="dropdown-item" href="/webscrape_sunburst">
+                                            Sunburst
+                                            <i class="fas fa-meteor"></i>
+                                        </a>
+                                    </div>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/scrape">
+                                        Latest Articles
+                                        <i class="fas fa-newspaper"></i>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/data">
+                                        Data
+                                        <i class="fas fa-database"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </form>
+
+                </nav>
+            </div>
         </div>
-        <div>
-          <ul>
-            <li>
-              <a href="{{ renewable_link_0 }}">{{ renewable_title_0 }}</a>
-            </li>
-            <li>
-              <a href="{{ renewable_link_1 }}">{{ renewable_title_1 }}</a>
-            </li>
-            <li>
-              <a href="{{ renewable_link_2 }}">{{ renewable_title_2 }}</a>
-            </li>
-            <li>
-              <a href="{{ renewable_link_3 }}">{{ renewable_title_3 }}</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+
+        <div class=“container”>
+            <div class=“row”>
+                <div class=“col-md-12 jumbotron text-center”>
+                    <h1>US Energy Production</h1>
+                </div>
+            </div>
     </div>
-  </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 biggest_box">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="white" style="padding: 10px">
+                            <h2>
+                        
+                            </h2>
+                            <hr>
+                            <div class="col-lg-12">
+                                <div class="col-lg-3">
+                                  <div class="col-md-5">
+                                    <div id="sunburst"></div>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 ml-auto">
+                      <div class="white" style="padding: 10px">
+                        <h2>
+                          Latest Articles
+                        </h2>
+                        <hr>
+                        <div style="border:1px solid black; box-shadow: 0 0 30px #719ECE; text-align: center" >
+                          <div> 
+                            Last Refresh: {{r_last_refresh}}
+                          </div>
+                          <div>
+                            <ul class="webscrape_list">
+                             <li style="list-style-type: none; color: black;">
+                               <a href="{{ renewable_link_0 }}">{{ renewable_title_0 }}</a>
+                              </li>
+                              <li style="list-style-type: none; color: black;">
+                               <a href="{{ renewable_link_1 }}">{{ renewable_title_1 }}</a>
+                              </li>
+                              <li style="list-style-type: none; color: black;">
+                                <a href="{{ renewable_link_2 }}">{{ renewable_title_2 }}</a>
+                              </li>
+                              <li style="list-style-type: none; color: black;"> 
+                               <a href="{{ renewable_link_3 }}">{{ renewable_title_3 }}</a>
+                              </li>
+                            </ul>
+                          </div>
+                        </g>
+                        <div class="col-lg-12">
+                            <div class="col-lg-3">
+                              <div class="col-md-5">
+                                <div id="sunburst"></div>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="../static/js/sunburst.js"></script>
+  </body>
+
+</html>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="../static/js/sunburst.js"></script>
 </body>
 
-</html>
+</html> -->
