--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Heatmap</title>
-
+    <h1>Heatmap of the Geographic Locations of Renewable Energy Plants in the US</h1>
     <!-- Google Font -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"> -->
 
@@ -23,8 +23,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand h1 goofy_blue" href="index.html">
-            <h1>Renewable Energy</h1>
+        <a class="navbar-brand h1 goofy_blue" href="/">
+            <h1></h1>
+            <i class="fas fa-home"></i>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,44 +33,38 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="dropdown-item" href="/">
-                        Home
-                        <i class="fas fa-sun"></i>
-                    </a>
-                </li>
-                <li class="nav-item active">
                     <a class="dropdown-item" href="/solar">
-                        solar
-                        <i class="fas fa-sun"></i>
-                    </a>
+            Solar
+            <i class="fas fa-sun"></i>
+          </a>
                 </li>
                 <li class="nav-item">
                     <a class="dropdown-item" href="/hydro">
-            hydroelectric
+            Hydroelectric
             <i class="fas fa-water"></i>
           </a>
                 </li>
                 <li class="nav-item">
                     <a class="dropdown-item" href="/location">
-            location
+            Location
             <i class="fas fa-map-marker"></i>
           </a>
                 </li>
                 <li class="nav-item">
                     <a class="dropdown-item" href="/wind">
-            wind
+            Wind
             <i class="fas fa-wind"></i>
           </a>
                 </li>
                 <li class="nav-item">
                     <a class="dropdown-item" href="/heatmap">
-            heatmap
+            Heatmap
             <i class="fas fa-thermometer-half"></i>
           </a>
                 </li>
                 <li class="nav-item">
-                    <a class="dropdown-item" href="/sunburst">
-            sunburst
+                    <a class="dropdown-item" href="/webscrape_sunburst">
+            Sunburst
             <i class="fas fa-meteor"></i>
           </a>
                 </li>
