--- a/templates/sunburst.html
+++ b/templates/sunburst.html
@@ -1,132 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-<link rel="stylesheet" href="../static/mars.css">
-<meta charset="UTF-8">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Solar</title>
-
-    <!-- Google Font -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"> -->
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-
-    <!-- Our CSS  -->
-    <link rel="stylesheet" href="../static/css/style.css" />
-    <link rel="stylesheet" href="./style.css" />
-
-    <title>Solar</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <script src="https://kit.fontawesome.com/76c400baa8.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+   <link rel="stylesheet" href="../static/mars.css">
+   <meta charset="UTF-8">
+   <head>
+      <meta charset="UTF-8">
+      <title>Sunburst</title>
+      <!-- Google Font -->
+      <!-- <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"> -->
+      <!-- Leaflet CSS -->
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+      <!-- Our CSS  -->
+      <link rel="stylesheet" href="../static/css/style.css" />
+      <link rel="stylesheet" href="./style.css" />
+      <title>Solar</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <script src="https://kit.fontawesome.com/76c400baa8.js" crossorigin="anonymous"></script>
+   </head>
+   <body>
+      <nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-between">
+         <a class="navbar-brand h1 goofy_blue" href="/">
+            <h1></h1>
+            <i class="fas fa-home"></i>
+         </a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="dropdown-item" href="solar.html">
-                        solar
-                        <i class="fas fa-sun"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="hydro.html">
-                        hydroelectric
-                        <i class="fas fa-water"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="location.html">
-                        location
-                        <i class="fas fa-map-marker"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="wind.html">
-                        wind
-                        <i class="fas fa-wind"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="heatmap.html">
-                        heatmap
-                        <i class="fas fa-thermometer-half"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="dropdown-item" href="sunburst.html">
-                        sunburst
-                        <i class="fas fa-meteor"></i>
-                    </a>
-                </li>
-
-
+               <li class="nav-item active">
+                  <a class="dropdown-item" href="/solar">
+                  Solar
+                  <i class="fas fa-sun"></i>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="dropdown-item" href="/hydro">
+                  Hydroelectric
+                  <i class="fas fa-water"></i>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="dropdown-item" href="/location">
+                  Location
+                  <i class="fas fa-map-marker"></i>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="dropdown-item" href="/wind">
+                  Wind
+                  <i class="fas fa-wind"></i>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="dropdown-item" href="/heatmap">
+                  Heatmap
+                  <i class="fas fa-thermometer-half"></i>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="dropdown-item" href="/webscrape_sunburst">
+                  Sunburst
+                  <i class="fas fa-meteor"></i>
+                  </a>
+               </li>
             </ul>
-        </div>
-        
-    </nav>
-
-
-
-
-    <!-- <body>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 jumbotron text-center">
-                </div>
+         </div>
+      </nav>
+      <!-- <body>
+         <div class="container">
+             <div class="row">
+                 <div class="col-md-12 jumbotron text-center">
+                 </div>
+             </div>
+             <div class="row">
+                 <div class="col-md-2">
+                 </div>
+                 <div class="col-md-5"> -->
+      <div id="sunburst"></div>
+      </div>
+      <div class="col-md-5">
+         <p>I'm going to scale them and add a tooltip later</p>
+      </div>
+      </div>
+      <div class="row">
+         <div class="col-md-12">
+            <div>
+               Last Refresh: {{r_last_refresh}}
             </div>
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-5"> -->
-                    <div id="sunburst"></div>
-                </div>
-                <div class="col-md-5">
-                    <p>I'm going to scale them and add a tooltip later</p>
-                </div>
+            <div>
+               <ul>
+                  <li>
+                     <a href="{{ renewable_link_0 }}">{{ renewable_title_0 }}</a>
+                  </li>
+                  <li>
+                     <a href="{{ renewable_link_1 }}">{{ renewable_title_1 }}</a>
+                  </li>
+                  <li>
+                     <a href="{{ renewable_link_2 }}">{{ renewable_title_2 }}</a>
+                  </li>
+                  <li>
+                     <a href="{{ renewable_link_3 }}">{{ renewable_title_3 }}</a>
+                  </li>
+               </ul>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div>
-                        Last Refresh: {{r_last_refresh}}
-                    </div>
-                    <div>
-                        <ul>
-                            <li>
-                                <a href="{{ renewable_link_0 }}">{{ renewable_title_0 }}</a>
-                            </li>
-                            <li>
-                                <a href="{{ renewable_link_1 }}">{{ renewable_title_1 }}</a>
-                            </li>
-                            <li>
-                                <a href="{{ renewable_link_2 }}">{{ renewable_title_2 }}</a>
-                            </li>
-                            <li>
-                                <a href="{{ renewable_link_3 }}">{{ renewable_title_3 }}</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <script src="../static/js/sunburst.js"></script>
-        <!-- <script src="./static/js/bonus.js"></script>
-  <script src="samples.json"></script> -->
-
-    </body>
-
+         </div>
+      </div>
+      </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+      <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+      <script src="../static/js/sunburst.js"></script>
+      <!-- <script src="./static/js/bonus.js"></script>
+         <script src="samples.json"></script> -->
+   </body>
 </html>
