--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Interactive Visualizations of Renewable Energy</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/style.css">
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
+    <!-- <link rel="stylesheet" href="./assets/style.css"> -->
+    <link rel="stylesheet" href="../static/css/style3.css"/> 
 
 </head>
-
 <body>
     <div class="container-fluid">
         <!-- The header starts here -->
@@ -57,7 +57,6 @@
                                         </a>
                                     </div>
                                 </li>
-
                                 <li class="nav-item">
                                     <a class="nav-link" href="/scrape">
                                         Latest Articles
@@ -69,12 +68,10 @@
                                         Data
                                         <i class="fas fa-database"></i>
                                     </a>
-                                    <!--Button for Webscraping-->
                                 </li>
                             </ul>
                         </div>
                     </form>
-
                 </nav>
             </div>
         </div>
@@ -94,27 +91,35 @@
                             <hr>
 
                             <div class="col-lg-12">
-                                <div class="col-lg-3">
+                                <div class="col-lg-3" id="index_sunburst"></div>
                                     <img class="img-responsive" style="float: left;" src="static/images/sunburst.png" width=200%>
                                 </div>
 
-                                <p class="normal_text"> The objective of this project was to find particular data on a topic of interest and to use different web development software to create a variety of visualizations that will tell a story through using data in our database
+                                <p class="normal_text"> 
+                                    In this project, we hope to demonstrate were renewable energy is being produced in the 
+                                    
+                                    United States and how much energy is being produced.
+                                    
+                                    <br>
+                                    
+                                    <br> The production of renewable energy is diversified across the United States. The California, Texas, Arizona and other 
 
-                                    on Renewable Energy Resource Consumption in the US.
+                                    states in southwestern United States produce the most solar energy. Hydroelectric power production is largely concerntrated 
+
+                                    northwestern states like Oregon, Washington, Idaho and parts of California. Wind energy production is greatest in mid-western states
+
+                                    and Texas.
+                                    
                                     
                                     <br>
                                     
-                                    <br> We have become more and more aware of the need to care for our environment therefore Renewable Energy Resources are becoming of greater interest, prevalence, and use. The effect of some types of conventional
+                                    <br> The sunburst chart at the end shows that renewable energy comprises of about 20% of the energy production 
+
+                                    in the US in 2019. Nearly 40% of that renewable energy production is wind power. Hydro-electric is the next 
                                     
-                                    energy sources, such as fossil fuels are being shown to have had and continue to have a negative impact on controversial topics such as Global Warming and the effect that such traditional, less clean, and limited
-                                    
-                                    energy sources have on slowly deteriorating have on our slowly deteriorating ozone layer and, hence, the quality of the air we breathe on a daily basis.
-                                    
-                                    <br>
-                                    
-                                    <br> Solar Power, Wind Power, and Hydro Power/Hydroelectricity are the major three sources of RE (Renewable Energy). Hence, we will look particularly at theses three types of energy and how much of these we are
-                                    
-                                    using through a series of visualizations. The fact alone that these resources are renewable by natural forces is of integral importance to why they are so important.
+                                    most common form of renewable energy, followed by solar power. Those three forms of energy production account for 
+
+                                    about 90% of all renewable energy production. The last page also links to articles in advancements in renewable energy.
                                 </p>
 
                             </div>
